--- a/src/index.css
+++ b/src/index.css
@@ -23,72 +23,11 @@ body {
   color: #eee;
 }
 
-/* Links */
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-/* Botões */
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 /* ===== Navbar ===== */
-.navbar {
-  font-weight: 600;
-}
-
-.nav-center-gap {
-  justify-content: center !important;
-  flex-grow: 1 !important;
-  gap: 1.5rem;
-}
-
-.navbar-search {
-  margin-left: 1rem;
-  min-width: 180px;
-  align-self: center;
-}
-
 .navbar-collapse.show {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
   background-color: #212529;
   border-radius: 0 0 8px 8px;
-}
-
-.navbar-collapse.show .nav-link {
-  margin: 0.5rem 0;
-  padding-left: 1rem;
-  font-size: 1.1rem;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.85);
-  transition: color 0.3s ease;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover,
@@ -157,65 +96,12 @@ small {
 }
 
 
-/* ===== Home ===== */
-
-
-.home-title {
-  font-size: 2rem;
-  color: #fff;
-}
-
-.filter-wrapper {
-  display: flex;
-  align-items: center;
-}
-
-.filter-select {
-  min-width: 180px;
-  padding: 0.4rem;
-}
-
-.loader-wrapper {
-  display: flex;
-  justify-content: center;
-  margin: 4rem 0;
-}
-
-.movie-grid {
-  display: grid;
-  gap: 1.5rem;
-}
+/* ===== No Result ===== */
 
 .no-results {
-  text-align: center;
-  margin-top: 3rem;
-  padding: 2rem;
-  border-radius: 12px;
-  background-color: #1a1a1a;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
-  color: #ccc;
   max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.no-results h2 {
-  font-size: 1.75rem;
-  margin-bottom: 0.5rem;
-  color: #fff;
-}
-
-.no-results p {
-  font-size: 1rem;
-  color: #bbb;
-}
-
-.no-results-icon {
-  font-size: 2.5rem;
-  color: #646cff;
-  margin-bottom: 1rem;
-  display: block;
-}
 
 
 @media (min-width: 768px) {
